feat: import go-common, remove duplicated codes; update dependency; allow not exists file config; partially change log to zerolog; replace encoding/json with github.com/goccy/go-json; add Aliyun ACR image building targe;
