# docs/swagger.json
@@ -66,19 +66,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "404": {
                         "description": "User Not Found",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -98,7 +98,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -158,13 +158,13 @@
                     "400": {
                         "description": "验证码错误",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -202,13 +202,13 @@
                     "400": {
                         "description": "验证码错误、用户已注册",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -245,13 +245,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -285,7 +285,7 @@
                             "items": {
                                 "allOf": [
                                     {
-                                        "$ref": "#/definitions/utils.MessageResponse"
+                                        "$ref": "#/definitions/common.MessageResponse"
                                     },
                                     {
                                         "type": "object",
@@ -302,19 +302,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "403": {
                         "description": "非管理员",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -333,7 +333,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -365,7 +365,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.MessageResponse"
+                                    "$ref": "#/definitions/common.MessageResponse"
                                 },
                                 {
                                     "type": "object",
@@ -383,7 +383,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.MessageResponse"
+                                    "$ref": "#/definitions/common.MessageResponse"
                                 },
                                 {
                                     "type": "object",
@@ -399,13 +399,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -430,19 +430,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "403": {
                         "description": "非管理员",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -461,25 +461,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "403": {
                         "description": "非管理员",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -519,13 +519,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -554,13 +554,13 @@
                     "403": {
                         "description": "不是管理员",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -588,7 +588,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -614,13 +614,13 @@
                     "404": {
                         "description": "用户不存在",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -649,19 +649,19 @@
                     "400": {
                         "description": "密码错误“",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "404": {
                         "description": "用户不存在“",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -696,19 +696,19 @@
                     "403": {
                         "description": "不是该用户或管理员",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "404": {
                         "description": "用户不存在",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -741,13 +741,13 @@
                     "403": {
                         "description": "不是管理员",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -787,25 +787,25 @@
                     "200": {
                         "description": "用户未注册“",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "403": {
                         "description": "apikey不正确“",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "409": {
                         "description": "用户已注册“",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -846,19 +846,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -900,13 +900,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/utils.MessageResponse"
+                            "$ref": "#/definitions/common.MessageResponse"
                         }
                     }
                 }
@@ -1097,7 +1097,44 @@
             }
         },
         "apis.UploadSharesRequest": {
+            "type": "object",
+            "required": [
+                "identity_name"
+            ],
+            "properties": {
+                "identity_name": {
+                    "type": "string"
+                },
+                "shares": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apis.UserShare"
+                    }
+                }
+            }
+        },
+        "apis.UserShare": {
+            "type": "object",
+            "properties": {
+                "share": {
+                    "$ref": "#/definitions/shamir.Share"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "big.Int": {
             "type": "object"
+        },
+        "common.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                }
+            }
         },
         "models.ShamirPublicKey": {
             "type": "object",
@@ -1136,12 +1173,14 @@
                 }
             }
         },
-        "utils.MessageResponse": {
+        "shamir.Share": {
             "type": "object",
             "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
+                "x": {
+                    "$ref": "#/definitions/big.Int"
+                },
+                "y": {
+                    "$ref": "#/definitions/big.Int"
                 }
             }
         }
